@@ -2,12 +2,23 @@ use Mojo::Base -strict;
 
 use Test::More;
 use Mojo::JSON qw(decode_json encode_json false from_json j to_json true);
-use Mojo::Util qw(decode encode);
 
 BEGIN {
   plan skip_all => 'Cpanel::JSON::XS 4.04+ required for this test!'
     unless Mojo::JSON->JSON_XS;
 }
+
+package JSONTest;
+use Mojo::Base -base;
+
+has 'something' => sub { {} };
+
+sub TO_JSON { shift->something }
+
+package main;
+
+use Mojo::ByteStream;
+use Mojo::Util qw(decode encode);
 
 # Basics
 my $array = decode_json '[]';
@@ -34,5 +45,26 @@ is to_json(['♥']), '["♥"]', 'characters encoded';
 # "canonical"
 is_deeply encode_json({a => 1, b => 2, c => 3}), '{"a":1,"b":2,"c":3}',
   'canonical object';
+
+# "allow_nonref"
+is_deeply encode_json(true), 'true', 'bare true';
+
+# "allow_unknown"
+is_deeply encode_json(sub { }), 'null', 'unknown reference';
+
+# "allow_blessed"
+is_deeply encode_json(Mojo::ByteStream->new('test')), '"test"',
+  'blessed reference';
+
+# "convert_blessed"
+is_deeply encode_json(JSONTest->new), '{}',
+  'blessed reference with TO_JSON method';
+
+# "stringify_infnan"
+is_deeply encode_json(9**9**9), '"inf"', 'inf';
+is_deeply encode_json(-sin(9**9**9)), '"nan"', 'nan';
+
+# "escape_slash"
+is_deeply encode_json('/test/123'), '"\/test\/123"', 'escaped slash';
 
 done_testing();
